<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:paddingBottom="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/circle"
                android:gravity="center"
                app:tint="@color/white">

                <ImageView
                    style="@drawable/circle"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@color/dark_gray"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/white" />

            </LinearLayout>


            <TextView
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:alpha="0.7"
                android:background="@drawable/line"
                android:gravity="center_horizontal"

                android:text="@string/category_download"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="start"
                android:src="@drawable/ic_notification"/>

            <TextView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="start"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/green"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/_2"
                android:textSize="8sp"/>
        </RelativeLayout>

        <!--    GROUP1    -->
        <LinearLayout style="@style/GroupStyle">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                style="@style/CardStyle">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/RoundedImage"
                        android:src="@drawable/ic_instagram"
                        app:shapeAppearanceOverlay="@style/Corner50Percent"
                        app:strokeColor="@color/white"
                        app:strokeWidth="14dp" />

                    <TextView
                        style="@style/CardTitle"
                        android:layout_centerInParent="true"
                        android:text="@string/instagram" />

                    <TextView
                        style="@style/CardDetails"
                        android:layout_marginBottom="45dp"
                        android:text="@string/total_download"
                        android:layout_alignParentBottom="true" />

                    <TextView
                        android:textSize="16sp"
                        style="@style/CardTitle"
                        android:text="@string/_120"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                style="@style/CardStyle">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeWidth="14dp"
                        android:background="@color/black"
                        style="@style/RoundedImage"
                        app:strokeColor="@color/white"
                        android:src="@drawable/ic_tiktok"
                        app:shapeAppearanceOverlay="@style/Corner50Percent"/>

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/tiktok"
                        android:layout_centerInParent="true"/>

                    <TextView
                        style="@style/CardDetails"
                        android:layout_marginBottom="45dp"
                        android:text="@string/total_download"
                        android:layout_alignParentBottom="true" />

                    <TextView
                        android:textSize="16sp"
                        style="@style/CardTitle"
                        android:text="@string/_36"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <!--    END G1    -->

        <!--    GROUP2    -->
        <LinearLayout style="@style/GroupStyle">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                style="@style/CardStyle">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeWidth="14dp"
                        style="@style/RoundedImage"
                        app:strokeColor="@color/white"
                        android:src="@drawable/ic_twitter"
                        app:shapeAppearanceOverlay="@style/Corner50Percent"/>

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/twitter"
                        android:layout_centerInParent="true"/>

                    <TextView
                        style="@style/CardDetails"
                        android:layout_marginBottom="45dp"
                        android:text="@string/total_download"
                        android:layout_alignParentBottom="true" />

                    <TextView
                        android:textSize="16sp"
                        style="@style/CardTitle"
                        android:text="@string/_12"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                style="@style/CardStyle">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeWidth="14dp"
                        style="@style/RoundedImage"
                        app:strokeColor="@color/white"
                        android:src="@drawable/ic_facebook"
                        app:shapeAppearanceOverlay="@style/Corner50Percent"/>

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/facebook"
                        android:layout_centerInParent="true"/>

                    <TextView
                        style="@style/CardDetails"
                        android:layout_marginBottom="45dp"
                        android:text="@string/total_download"
                        android:layout_alignParentBottom="true" />

                    <TextView
                        android:textSize="16sp"
                        style="@style/CardTitle"
                        android:text="@string/_331"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <!--    END G2    -->

        <!--    GROUP3    -->
        <LinearLayout style="@style/GroupStyle">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                style="@style/CardStyle">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeWidth="14dp"
                        style="@style/RoundedImage"
                        app:strokeColor="@color/white"
                        android:src="@drawable/ic_youtube"
                        app:shapeAppearanceOverlay="@style/Corner50Percent"/>

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/youtube"
                        android:layout_centerInParent="true"/>

                    <TextView
                        style="@style/CardDetails"
                        android:layout_marginBottom="45dp"
                        android:text="@string/total_download"
                        android:layout_alignParentBottom="true" />

                    <TextView
                        style="@style/CardTitle"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20dp"
                        android:text="@string/_531"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                style="@style/CardStyle">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeWidth="14dp"
                        style="@style/RoundedImage"
                        app:strokeColor="@color/white"
                        android:src="@drawable/ic_snapchat"
                        app:shapeAppearanceOverlay="@style/Corner50Percent"/>

                    <TextView
                        style="@style/CardTitle"
                        android:text="@string/snapchat"
                        android:layout_centerInParent="true"/>

                    <TextView
                        style="@style/CardDetails"
                        android:layout_marginBottom="45dp"
                        android:text="@string/total_download"
                        android:layout_alignParentBottom="true" />

                    <TextView
                        android:textSize="16sp"
                        style="@style/CardTitle"
                        android:text="@string/_97"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <!--    END G3    -->

    </LinearLayout>

</ScrollView>